2003-05-05  Matti Aarnio  <mea@zmailer.org>

	* compat/sendmail/sendmail.c:
	    If process environment has ZCONFIG variable set, does read
	    ZENV variables from that place.

	* proto/mailrm.sh.in, proto/newaliases.in, proto/newfqdnaliases.in,
	  proto/post-install.sh.in, transports/expirer/manual-expirer.in,
	  transports/reroute/manual-rerouter.in, utils/policy-builder.sh.in,
	  utils/rotate-logs.sh.in, utils/zmailer.init.sh.in:
	    Eugene Crosser noted, that not all scripts inherit / are
	    otherwise configurable to use alternate (than configured-in)
	    value of  ZCONFIG.

2003-05-02  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/contentpolicy.c, smtpserver/readpolicy.c,
	  include/policy.h, smtpserver/policytest.c, smtpserver/policytest.h,
	  doc/guides/smtp-policy, proto/db/smtp-policy.src:
	    Added 'filtering +' phrase to smtpserver's IP ADDRESS tests.

	* utils/perl/mailq/Makefile.PL, utils/perl/mailq/mailq.pm,
	  utils/perl/mailq/MANIFEST, utils/perl/mailq/README,
	  utils/perl/mailq/Changes, utils/perl/Makefile.in, utils/Makefile.in,
	  configure.in:
	    Made old perl-test tool into proper OO Perl code.
	    Requires perl 5.8. (I think).

	* scheduler/agenda.c, scheduler/msgerror.c, scheduler/threads.c,
	  scheduler/scheduler.c, scheduler/prototypes.h:
	    Debugging the long living thing where "mailq -Q" mode reports
	    negative counts for stored messages.  Apparently fixed it!

2003-05-01  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  man/smtpserver.8, proto/smtpserver.conf.in:
	    tar-pit things from James MacKinnon.
	    Actually diff against 2.99.55, which has been adapted to
	    current CVS.

	* proto/zmailer.sh.in:
	    Quote typo introduced when adding  --zconfig   option..  Oops.

2003-04-30  Matti Aarnio  <mea@zmailer.org>

	* Makefile.in:
	   Version 2.99.56-pre5

	* README.UPGRADING:
	    The router internal logic change IS script incompatible!